--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,18 @@
     <string name="app_name">Nom Nom</string>
     <string name="login">Login</string>
     <string name="register">Sign Up</string>
+    <string name="placeOrder">Place Your Order</string>
+    <string name="order">Order Now</string>
+    <string name="name">Name:</string>
+    <string name="address">Delivery Address:</string>
+    <string name="quantity">Quantity:</string>
+    <string name="name1">Name</string>
+    <string name="address1">Address</string>
+    <string name="quantity1">Quantity</string>
+    <string name="yourOrder">Your Orders</string>
+    <string name="buttonView">View Orders</string>
+    <string name="buttonEdit">Edit Order</string>
+    <string name="buttonDelete">Delete Order</string>
+    <string name="orderId">Order ID</string>
+    <string name="editId">EditId</string>
 </resources>
